<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp">

	<TextView
			android:id="@+id/tv_main_old_street_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/title_street_name"
			android:layout_marginBottom="@dimen/dialog_vertical_margin"/>

	<EditText
			android:id="@+id/et_old_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_street_name"
			android:textSize="@dimen/edit_text_size"
			android:layout_marginBottom="@dimen/dialog_vertical_margin"
			android:imeOptions="actionNext"
			android:singleLine="true"/>

	<CheckBox
			android:id="@+id/cb_has_new_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_has_new_name"/>


	<LinearLayout
			android:id="@+id/container_street_new_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:visibility="gone">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/title_new_name"/>

		<EditText
				android:id="@+id/et_new_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hint_new_name"
				android:textSize="@dimen/edit_text_size"
				android:layout_marginBottom="@dimen/dialog_vertical_margin"
				android:inputType="textCapSentences"
				android:imeOptions="actionNext"
				android:singleLine="true"/>

	</LinearLayout>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/title_description"/>

	<EditText
			android:id="@+id/et_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_description"
			android:textSize="@dimen/edit_text_size"
			android:inputType="textCapSentences"
			android:imeOptions="actionDone"
			android:singleLine="true"/>


</LinearLayout>