<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		tools:context=".activity.SearchActivity"
		android:orientation="vertical"
		>

	<EditText
			android:id="@+id/et_search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_search_field"
			>

		<requestFocus/>
	</EditText>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:orientation="horizontal"
			>

		<Button
				android:id="@+id/btn_clear_search"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/btn_clear"
				style="?android:attr/buttonBarButtonStyle"/>

		<Button
				android:id="@+id/btn_search"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/btn_ok"
				style="?android:attr/buttonBarButtonStyle"/>

	</LinearLayout>
</LinearLayout>
